fixes viewport height on mobile

--- a/src/scss/components/_quiz.scss
+++ b/src/scss/components/_quiz.scss
@@ -1,5 +1,5 @@
 .quiz {
-	min-height: 100vh;
+	min-height: 100svh;
 	width: 100vw;
 	display: flex;
 	align-items: center;
