--- a/src/scss/elements/_container.scss
+++ b/src/scss/elements/_container.scss
@@ -16,6 +16,6 @@
 
 	&--view-height {
 		max-height: 800px;
-		height: 100vh;
+		height: 100svh;
 	}
 }
